--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: python
 python:
+    - "2.6"
     - "2.7"
+    - "2.7.6"
+    - "3.2"
+    - "3.3"
     - "pypy"
 install:
-    - pip install mock==2.0.0 nose==1.3.7
+    - pip install mock==2.0.0 nose==1.3.7 recordtype==1.1
     - python setup.py install
 script: nosetests -v
